Wrap recipients one per line on the client so that a long recipient list would no longer push out all the content on the left.
Make entity names italicized and underlined (if they are linkified) wherever they 
appear as senders, recipients, or participants.

--- a/dumbhippo/trunk/server/web/css3/chatwindow.css
+++ b/dumbhippo/trunk/server/web/css3/chatwindow.css
@@ -18,6 +18,14 @@ body {
 	border-top: 2px solid #c9c9c9;
 }
 
+#dhChatUserList {
+    font-style:  italic;	
+}
+
+#dhChatUserList a {
+    text-decoration: underline; 
+}
+
 #dhChatMessages {
 	font-size: 12px;
 }
